= v0.6.5 - to be released
* enhancements
  * When columns states are saved in the persistent storage, adding/removing columns (e.g. in the code) will reset the saved states
  * Moved features and specs to test/rails_app
* bug fix
  * FormPanel with multiple association fields wouldn't submit data correctly

= v0.6.4 - 2011-02-26
* API changes
  * The combo field able to talk to the server has changed its xtype from combobox to netzkeremotecombo. When getting values from the server via AJAX, it expects a 2-dimensional array now, where the first value is the real value (which gets submitted), and the second value is the display value.
  * xdatetime is no more. datetimefield is used instead.

* enhancements
  * Components updated to use Ext.Direct (by @pschyska)
  * New, improved advanced search for GridPanel and PagingFormPanel.
  * One-to-many association support in Form/GridPanel reworked to use the foreign id instead of a string. This gives us more flexibility about what to display in the association column/field, and also provides for performance improvements (no more need to search for the associated record based on the value provided from the column/field).
  * GridPanel now memorizes its columns visibility, position and size (when :persistence is set to true)
  * I18n for GridPanel
  * A default value can now also be assigned to association column/field (the value must be the associated record's ID)
  * Slightly optimized selenium tests (no artificial sleeping whenever possible)

* bug fix
  * Long-standing visual issues with datetime columns in grid panel are solved.

= v0.6.3 - 2011-01-14
* compatibility with netzke-core 0.6.5

* refactoring
  * GridPanel code restructured, using the new +js_mixin+ method

* bug fix
  * GridPanel respects strong_default_attrs
  * TabPanel doesn't fire multiple load requests per tab in case of lazy-loaded tabs and fast clicking
  * Filtering/sorting on virtual columns is now disabled by default
  * Filtering on date columns
