@@ -1,4 +1,6 @@
 = v0.6.5 - to be released
+* changes
+  * Replaced tri-state checkbox with combobox in the multi-edit form and search form
 * enhancements
   * When columns states are saved in the persistent storage, adding/removing columns (e.g. in the code) will reset the saved states
   * Moved features and specs to test/rails_app
